<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Reportbreakdown">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="82dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/edd" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textview_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Report Breakdown"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_lgborder"
                    android:layout_width="339dp"
                    android:layout_height="690dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="43dp"
                    android:layout_marginRight="43dp"
                    android:background="@drawable/border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="285dp"
                    android:layout_height="49dp"
                    android:ems="10"
                    android:hint="Paste Location"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_lgborder"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.666"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.639"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/town"
                    android:layout_width="189dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:hint="Town Name"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_lgborder"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.886"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.032"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/vilage"
                    android:layout_width="189dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:hint="Village/Road Name"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_lgborder"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.92"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.132"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/addbreakdown"
                    android:layout_width="299dp"
                    android:layout_height="44dp"
                    android:background="@drawable/textborder"
                    android:onClick="add"
                    android:text="Add To My List"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:backgroundTint="#6cbfb0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.906"
                    tools:ignore="OnClick,TouchTargetSizeCheck" />

                <LinearLayout
                    android:id="@+id/statusLayout"
                    android:layout_width="309dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.45">


                    <TextView
                        android:id="@+id/detailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/progressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/getting_location"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/gpsButton"
                        android:layout_width="fill_parent"
                        android:layout_height="54dp"
                        android:onClick="openLocationSettings"
                        android:text="@string/turn_on_GPS"
                        android:visibility="gone"
                        tools:ignore="OnClick" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareLayout"
                    android:layout_width="311dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_lgborder"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.244"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.556">
                    <Button
                        android:id="@+id/shareButton"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:onClick="shareLocation"
                        android:text="@string/share_location" />

                    <Button
                        android:id="@+id/copyButton"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:onClick="copyLocation"
                        android:text="@string/copy_location" />

                    <Button
                        android:id="@+id/viewButton"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:onClick="viewLocation"
                        android:text="@string/view_location" />

                </LinearLayout>

                <Button
                    android:id="@+id/addimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.145"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.75" />

                <TextView
                    android:id="@+id/townn"
                    android:layout_width="78dp"
                    android:layout_height="32dp"
                    android:text="Town : "
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.032" />

                <TextView
                    android:id="@+id/Villagen"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:text="Village/Road : "
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.033"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.13" />

                <TextView
                    android:id="@+id/descriptionn"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:text="Description : "
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.071"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.235" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="174dp"
                    android:layout_height="107dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_lgborder"
                    app:layout_constraintEnd_toEndOf="@+id/textView_lgborder"
                    app:layout_constraintHorizontal_bias="0.896"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toTopOf="@+id/textView_lgborder"
                    app:layout_constraintVertical_bias="0.258"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/imgView_camera"
                    android:layout_width="141dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/addimage"
                    app:layout_constraintTop_toBottomOf="@+id/location"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <Button
                    android:id="@+id/btn_addBreakdownWithAssign"
                    android:layout_width="299dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/textborder"
                    android:text="Add To Supervisor List"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:backgroundTint="#6cbfb0"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toBottomOf="@+id/addbreakdown"
                    tools:ignore="OnClick,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/imageName"
                    android:layout_width="162dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="148dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toTopOf="@+id/addbreakdown"
                    app:layout_constraintStart_toStartOf="@+id/textView_lgborder"
                    app:layout_constraintTop_toBottomOf="@+id/imgView_camera"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>